# Algebra

./: .gitignore  .vimrc  CMakeLists.txt  Makefile  README.md  algebra.hpp  database.hpp  file.hpp  interpreter.cpp  interpreter.hpp  library.hpp  main.cpp  postprocessor.cpp  postprocessor.hpp  preprocessor.cpp  preprocessor.hpp  processor.cpp  processor.hpp  syntax.hpp  terminal.hpp
headers/architecture/: interface.hpp  interpreter.hpp  postprocessor.hpp  preprocessor.hpp  processor.hpp
headers/libraries/: algebra.hpp  exception.hpp  file.hpp  syntax.hpp  terminal.hpp
headers/variables/: .database.hpp.swn  .database.hpp.swo  .database.hpp.swp  .library.hpp.swm  .library.hpp.swn  .library.hpp.swo  .library.hpp.swp  database.hpp  library.hpp
sources/architecture/: interpreter.cpp  postprocessor.cpp  preprocessor.cpp
sources/libraries/: algebra.cpp  exception.cpp  syntax.cpp
sources/variables/: library.cpp
